Changed max width to prevent overflow on basic css styling

--- a/client/src/components/Overview/Image/Image.css
+++ b/client/src/components/Overview/Image/Image.css
@@ -1,7 +1,7 @@
 .Main-Image {
   position: absolute;
   max-height: 700px;
-  max-width: 650px;
+  max-width: 620px;
 
 }
 
